--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     color: white;
-    background: url('images/home-bg.jpg') no-repeat center center fixed;
-    background-size: cover;
+    /* background: url('images/home-bg.jpg') no-repeat center center fixed; */
+    /* background-size: cover; */
   }
   
   .navbar {
@@ -34,7 +34,7 @@ body {
     padding: 5px 10px;
     border-radius: 5px;
     margin-right: 5%;
-    margin-left: 5%;
+    margin-left: 2%;
     transition: background-color 0.3s;
   }
   
@@ -64,6 +64,88 @@ body {
   }
   
   .content a:hover {
+    text-decoration: underline;
+  }
+  
+
+
+
+
+
+
+
+
+
+
+  /* Login  */
+  .login-box {
+    background-color: rgba(0, 0, 0, 0.6);
+    padding: 30px;
+    border-radius: 10px;
+    max-width: 400px;
+    width: 100%;
+  }
+  
+  .login-box h1 {
+    margin-bottom: 20px;
+    font-size: 24px;
+  }
+  
+  .login-box label {
+    display: block;
+    text-align: left;
+    margin-bottom: 5px;
+    font-size: 14px;
+  }
+  .login-box input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: none;
+    border-radius: 5px;
+    outline: none;
+    font-size: 14px;
+  }
+  
+  .login-box .forgot-password {
+    display: block;
+    text-align: right;
+    margin-bottom: 20px;
+    color: #4a90e2;
+    text-decoration: none;
+  }
+  
+  .login-box .forgot-password:hover {
+    text-decoration: underline;
+  }
+  
+  .login-box button {
+    width: 100%;
+    padding: 10px;
+    background-color: #4a90e2;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .login-box button:hover {
+    background-color: #357ab7;
+  }
+  
+  .login-box .register-link {
+    margin-top: 10px;
+    font-size: 14px;
+  }
+  
+  .login-box .register-link a {
+    color: #4a90e2;
+    text-decoration: none;
+  }
+  
+  .login-box .register-link a:hover {
     text-decoration: underline;
   }
   
