--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
     color: white;
     text-decoration: none;
     font-size: 18px;
+    margin-right: 2%;
   }
   
   .navbar .login-button {
@@ -34,7 +35,6 @@ body {
     padding: 5px 10px;
     border-radius: 5px;
     margin-right: 5%;
-    margin-left: 2%;
     transition: background-color 0.3s;
   }
   
