--- a/styles.css
+++ b/styles.css
@@ -7,10 +7,11 @@ body {
   }
   
   .navbar {
+    display: block;
     background-color: #1a1a1a;
     padding: 10px 20px;
-    position: fixed;
     width: 100%;
+    margin-bottom: 50px;
     top: 0;
     left: 0;
   }
@@ -45,6 +46,7 @@ body {
   
   .main-content {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
@@ -82,6 +84,7 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     padding: 30px;
     border-radius: 10px;
+    margin-bottom: 50px;
     max-width: 400px;
     width: 100%;
   }
@@ -98,7 +101,7 @@ body {
     font-size: 14px;
   }
   .login-box input {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     margin-bottom: 10px;
     border: none;
@@ -228,8 +231,8 @@ body {
     background-color: rgba(0, 0, 0, 0.6);
     padding: 30px;
     border-radius: 10px;
-    display: flex;
-    flex-direction: column;
+    margin-top:50px;
+    margin-bottom: 50px;
   }
   .profile-fields input {
     /* width: 100%; */
